--- a/ti_app/templates/index.html
+++ b/ti_app/templates/index.html
@@ -36,19 +36,19 @@
                     <form class="crud_forms" id="new_user">
                         <div class="form-group">
                             <label for="Email">Username</label>
-                            <input type="text" name="username" class="form-control" id="Username" placeholder="Enter username" value="user">
+                            <input type="text" name="username" class="form-control" id="Username" placeholder="Enter username">
                         </div>
                         <div class="form-group">
                             <label for="Email">Email address</label>
-                            <input type="email" name="email" class="form-control" id="Email" placeholder="Enter email" value="user@mail.com">
+                            <input type="email" name="email" class="form-control" id="Email" placeholder="Enter email">
                         </div>
                         <div class="form-group">
                             <label for="firstName">First name</label>
-                            <input type="text" name="first_name" class="form-control" id="firstName" placeholder="Enter first name" value="first">
+                            <input type="text" name="first_name" class="form-control" id="firstName" placeholder="Enter first name">
                         </div>
                         <div class="form-group">
                             <label for="lastName">Last name</label>
-                            <input type="text" name="last_name" class="form-control" id="lastName" placeholder="Enter last name" value="last">
+                            <input type="text" name="last_name" class="form-control" id="lastName" placeholder="Enter last name">
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
